part9 - Building the Profile Part 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     //BottomNavigationViewEx library
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
 
+    //Circle ImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
